--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
         - sudo apt-get install cmake g++
         - git clone https://github.com/malaterre/GDCM && cd GDCM && mkdir build && cd build && cmake ../
         - make
-        - make install 
+        - sudo make install 
         - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
         - sudo apt-get update -qq
         - sudo apt-get install qtbase5-dev qtdeclarative5-dev libqt5webkit5-dev libsqlite3-dev
